// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListingDetailsLotteryModalFooter displays full footer when modal status is initial state 1`] = `
<DocumentFragment>
  <div
    class="bg-gray-100 py-4 px-8 md:px-0 text-center"
  >
    <a
      class="text-blue-900"
      href="http://sfmohcd.org/housing-preference-programs"
      target="_blank"
    >
      Read About Housing Preferences
    </a>
  </div>
  <div
    class="p-4 text-center text-sm"
  >
    <p
      class="py-2"
    >
      <a
        class="text-blue-900"
        href="https://sfmohcd.org/sites/default/files/Documents/MOH/Lottery%20Results/855%20Brannan%20%23318%20Lottery%20Results%201.26.22.pdf"
        target="_blank"
      >
        Download lottery results PDF
      </a>
    </p>
  </div>
</DocumentFragment>
`;

exports[`ListingDetailsLotteryModalFooter displays preference link only when status is not initial state 1`] = `
<DocumentFragment>
  <div
    class="bg-gray-100 py-4 px-8 md:px-0 text-center"
  >
    <a
      class="text-blue-900"
      href="http://sfmohcd.org/housing-preference-programs"
      target="_blank"
    >
      Read About Housing Preferences
    </a>
  </div>
</DocumentFragment>
`;
